Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-37595

Assertion `thd->transaction->stmt.is_empty()' failed in mysql_ha_open when using mrg_myisam GTT

    XMLWordPrintable

Details

    • Not for Release Notes
    • Q4/2025 Server Maintenance

    Description

      CREATE GLOBAL TEMPORARY TABLE t (x INT) ENGINE=mrg_myisam;
      HANDLER t OPEN;
      

      Leads to:

      MDEV-35915-2 CS 12.0.1 f88831afe2e18d124dfeaaf15ac51725a319b8e2 (Debug, Clang 21.1.0-20250811) Build 06/09/2025

      mariadbd: /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_handler.cc:480: bool mysql_ha_open(THD *, TABLE_LIST *, SQL_HANDLER *): Assertion `thd->transaction->stmt.is_empty()' failed.
      

      MDEV-35915-2 CS 12.0.1 f88831afe2e18d124dfeaaf15ac51725a319b8e2 (Debug, Clang 21.1.0-20250811) Build 06/09/2025

      Core was generated by `/test/MDEV-35915_2_MD060925-mariadb-12.0.1-linux-x86_64-dbg/bin/mariadbd --no-d'.
      Program terminated with signal SIGABRT, Aborted.
      #0  __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
       
      [Current thread is 1 (LWP 324770)]
      (gdb) bt
      #0  __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
      #1  __pthread_kill_internal (signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:78
      #2  __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=6)at ./nptl/pthread_kill.c:89
      #3  0x00007e267744526e in __GI_raise (sig=sig@entry=6)at ../sysdeps/posix/raise.c:26
      #4  0x00007e26774288ff in __GI_abort () at ./stdlib/abort.c:79
      #5  0x00007e267742881b in __assert_fail_base (fmt=0x7e26775d01e8 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x5683412560d2 "thd->transaction->stmt.is_empty()", file=file@entry=0x5683413ec7c4 "/test/bb-12.0-nikita-global-tmp_dbg/sql/sql_handler.cc", line=line@entry=480, function=function@entry=0x56834139928a "bool mysql_ha_open(THD *, TABLE_LIST *, SQL_HANDLER *)") at ./assert/assert.c:94
      #6  0x00007e267743b507 in __assert_fail (assertion=0x5683412560d2 "thd->transaction->stmt.is_empty()", file=0x5683413ec7c4 "/test/bb-12.0-nikita-global-tmp_dbg/sql/sql_handler.cc", line=480, function=0x56834139928a "bool mysql_ha_open(THD *, TABLE_LIST *, SQL_HANDLER *)") at ./assert/assert.c:103
      #7  0x0000568341ea81f1 in mysql_ha_open (thd=0x7e2548000d58, tables=0x7e2548019fb8, reopen=0x0)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_handler.cc:480
      #8  0x0000568341f11113 in mysql_execute_command (thd=0x7e2548000d58, is_called_from_prepared_stmt=false)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_parse.cc:5451
      #9  0x0000568341f03ea8 in mysql_parse (thd=0x7e2548000d58, rawbuf=0x7e2548019ef0 "HANDLER t OPEN", length=14, parser_state=0x7e26741b2a10)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_parse.cc:7893
      #10 0x0000568341f01689 in dispatch_command (command=COM_QUERY, thd=0x7e2548000d58, packet=0x7e254800b269 "HANDLER t OPEN", packet_length=14, blocking=true)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_parse.cc:1881
      #11 0x0000568341f0492a in do_command (thd=0x7e2548000d58, blocking=true)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_parse.cc:1420
      #12 0x00005683420f5c1e in do_handle_one_connection (connect=0x568344118ea8, put_in_cache=true)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_connect.cc:1414
      #13 0x00005683420f5a01 in handle_one_connection (arg=0x568344041638)at /test/bb-12.0-nikita-global-tmp_dbg/sql/sql_connect.cc:1326
      #14 0x00007e267749ca94 in start_thread (arg=<optimized out>)at ./nptl/pthread_create.c:447
      #15 0x00007e2677529c3c in clone3 ()at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78
      

      Attachments

        Issue Links

          Activity

            People

              nikitamalyavin Nikita Malyavin
              Roel Roel Van de Paar
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: