MDEV-37595 Assertion '...' failed using HANDLER+mrg_myisam+GTT

Assertion `thd->transaction->stmt.is_empty()' failed in mysql_ha_open
when using mrg_myisam GTT.

mysql_ha_open invokes close_thread_tables itself per error handling,
even though it should be done globally in mysql_parse after statement
execution.

The right order is:
1. commit/rollback transaction
2. close tables
3. unlock

Since mysql_parse does it, there is no sense in doing this, unless it's
a sub-statement, where we might've wanted a better grain of tables
locked in case of sub-statement failure.

Parent issue:
MDEV-35915 Implement Global temporary tables